# ruckup

./: .gitignore  Cargo.toml  LICENSE  README.md  commitlint.config.cjs  mise.toml  ruckup-update-report-cargo.html
.githooks/: pre-commit
.github/workflows/: ci.yml  commitlint.yml  release.yml
src/: cli.rs  config.rs  http.rs  main.rs  plugin.rs  progress.rs  report.rs
src/plugins/: cargo.rs  docker.rs  github_actions.rs  mod.rs  npm.rs  pyproject.rs  requirements.rs
tests/: cli_integration.rs
